# maybe

./: .pre-commit-config.yaml  Makefile  README.md  maybe.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
requirements/: dev.txt
src/maybe/: __init__.py
tests/: test_just.py  test_nothing.py
