[metadata]
name = "Maybe"
version = 0.1
url = https://github.com/mjsonofharry/maybe
license = MIT
author = MJ Harrison
author_email = mjsonofharry@gmail.com
description = Toy project implementing Maybe/Just/Nothing
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.6

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    maybe
    tests

[coverage:paths]
source =
    src
    */site-packages
